--- a/simple_java/pom.xml
+++ b/simple_java/pom.xml
@@ -10,6 +10,45 @@
   <name>simple_java</name>
   <url>http://maven.apache.org</url>
 
+
+
+<!-- ####################### adding the SCM url information  ################# -->
+
+<scm>
+        <connection>scm:git:https://github.com/satyadevops/release.git</connection>
+        <developerConnection>scm:git:https://github.com/satyadevops/release.git</developerConnection>
+    </scm>
+
+<!-- ***************************************************************************** -->
+
+<!-- ################################build release plugin coordinates ################ -->
+
+<build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+      </plugin>
+    </plugins>
+  </build>
+
+<!-- *********************************************************************************** -->
+
+<!-- #####################################  for nexus atifactory server ############ -->
+ <distributionManagement>
+    <repository>
+    <id>releases</id>
+    <url>http://192.168.223.132:8080/nexus-2.14.5-02/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+    <id>snapshots</id>
+    <url>http://192.168.223.132:8080/nexus-2.14.5-02/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+<!-- **********************************  ****************************************** -->
+
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
