--- a/simple_java/pom.xml
+++ b/simple_java/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>devops.practice.maven</groupId>
   <artifactId>simple_java</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>jar</packaging>
 
   <name>simple_java</name>
@@ -17,7 +16,8 @@
 <scm>
         <connection>scm:git:https://github.com/satyadevops/release.git</connection>
         <developerConnection>scm:git:https://github.com/satyadevops/release.git</developerConnection>
-    </scm>
+      <tag>1.1</tag>
+  </scm>
 
 <!-- ***************************************************************************** -->
 
