--- a/simple_java/pom.xml
+++ b/simple_java/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>devops.practice.maven</groupId>
   <artifactId>simple_java</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.1</version>
   <packaging>jar</packaging>
 
   <name>simple_java</name>
@@ -16,7 +16,7 @@
 <scm>
         <connection>scm:git:https://github.com/satyadevops/release.git</connection>
         <developerConnection>scm:git:https://github.com/satyadevops/release.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>2.1</tag>
   </scm>
 
 <!-- ***************************************************************************** -->
