--- a/simple_java/pom.xml
+++ b/simple_java/pom.xml
@@ -39,7 +39,7 @@
  <distributionManagement>
     <repository>
     <id>releases</id>
-    <urlhttp://54.191.23.227:8081/nexus-2.14.5-02/content/repositories/releases/</url>
+    <url>http://54.191.23.227:8081/nexus-2.14.5-02/content/repositories/releases/</url>
     </repository>
     <snapshotRepository>
     <id>snapshots</id>
